# upeftg

./: .gitignore  README.md  cluster_z_space.py  cnn_multihead_vs_binary_head_comparison.md  cnn_multihead_vs_binary_head_comparison_binary_fpr_0_1.md  compare_representation_reports.py  environment.yml  extract_delta_features.py  gmm_manifest.json  gmm_train_inference.py  prepare_data.py  prepare_manifest.json  pyproject.toml  results_#1_summary.txt  run_clustering.sh  run_compare_representation.sh  run_extract_delta_features.sh  run_extract_delta_features_array.sh  run_gmm_train_inference.sh  run_prepare_data.sh  run_supervised_tuning_array.sh  run_supervised_tuning_array_merged.sh  run_svd.sh  slurm-cnn-multiclass-list2winner-44007.out
archive/: README.md
docs/: architecture.md  experiment-runbook.md  pipeline-overview.md  slurm-orchestration.md  spectral-features.md
experiments_bash/: run_cnn_tbh_all_adapters.sh  run_cnn_tbh_all_architectures.sh  run_cnn_tbh_all_ranks.sh  run_single_dataset_cnn_trainings.sh
sbatch/: cnn_aggregate.sh  cnn_infer.sh  feature_extract_array.sh  run_clustering.sh  run_extract_append_array_merge_existing.sh  run_extract_delta_features.sh  run_extract_delta_features_array.sh  run_gmm_train_inference.sh  run_supervised_tuning_array.sh  run_supervised_tuning_array_merged.sh  run_svd.sh  supervised_array.sh  supervised_feature_importance_array.sh
scripts/: generate_backdoor_detection_summaries.py  run_all_leave_one_out_supervised_cnn.sh  run_all_zero_shot_supervised_cnn.sh  run_imdb_clean_reference_experiment.py  run_supervised_slurm.py  (+3 more)
(+399 files in other folders)
